kubernetes/ingress/ingress-7.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/issuer: ""letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #nginx.ingress.kubernetes.io/auth-type: "basic"
    #nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
    #nginx.ingress.kubernetes.io/auth-realm: "Autenticação necessária!"
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  tls:
  - hosts:
    - giropops.devopskira.com
    secretName: giropops-tls
  ingressClassName: nginx
  rules:
  - host: giropops.devopskira.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
